machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h


typedef uint8_t cm_hash[CM_MACHINE_HASH_BYTE_SIZE];
typedef struct { 
    cm_hash *entry;
    size_t count;
} cm_hash_array;
typedef enum { 
    CM_BREAK_REASON_FAILED,
    CM_BREAK_REASON_HALTED,
    CM_BREAK_REASON_YIELDED_MANUALLY,
    CM_BREAK_REASON_YIELDED_AUTOMATICALLY,
    CM_BREAK_REASON_REACHED_TARGET_MCYCLE
} CM_BREAK_REASON;
typedef enum { 
    CM_PROC_PC,
    CM_PROC_FCSR,
    CM_PROC_MVENDORID,
    CM_PROC_MARCHID,
    CM_PROC_MIMPID,
    CM_PROC_MCYCLE,
    CM_PROC_ICYCLEINSTRET,
    CM_PROC_MSTATUS,
    CM_PROC_MTVEC,
    CM_PROC_MSCRATCH,
    CM_PROC_MEPC,
    CM_PROC_MCAUSE,
    CM_PROC_MTVAL,
    CM_PROC_MISA,
    CM_PROC_MIE,
    CM_PROC_MIP,
    CM_PROC_MEDELEG,
    CM_PROC_MIDELEG,
    CM_PROC_MCOUNTEREN,
    CM_PROC_MENVCFG,
    CM_PROC_STVEC,
    CM_PROC_SSCRATCH,
    CM_PROC_SEPC,
    CM_PROC_SCAUSE,
    CM_PROC_STVAL,
    CM_PROC_SATP,
    CM_PROC_SCOUNTEREN,
    CM_PROC_SENVCFG,
    CM_PROC_ILRSC,
    CM_PROC_IFLAGS,
    CM_PROC_CLINT_MTIMECMP,
    CM_PROC_HTIF_TOHOST,
    CM_PROC_HTIF_FROMHOST,
    CM_PROC_HTIF_IHALT,
    CM_PROC_HTIF_ICONSOLE,
    CM_PROC_HTIF_IYIELD,
    CM_PROC_UARCH_PC,
    CM_PROC_UARCH_CYCLE,
    CM_PROC_UARCH_HALT_FLAG,
    CM_PROC_UNKNOWN
} CM_PROC_CSR;
typedef struct { 
    uint64_t target_address;
    size_t log2_target_size;
    cm_hash target_hash;
    size_t log2_root_size;
    cm_hash root_hash;
    cm_hash_array sibling_hashes;
} cm_merkle_tree_proof;
typedef struct {      
    bool proofs;      
    bool annotations; 
    bool large_data;  
} cm_access_log_type;
typedef struct { 
    cm_access *entry;
    size_t count;
} cm_access_array;
typedef struct { 
    cm_bracket_note *entry;
    size_t count;
} cm_bracket_note_array;
typedef struct { 
    const char **entry;
    size_t count;
} cm_note_array;
typedef struct {                    
    cm_access_array accesses;       
    cm_bracket_note_array brackets; 
    cm_note_array notes;            
    cm_access_log_type log_type;    
} cm_access_log;
typedef struct { 
    uint64_t update_merkle_tree;
} cm_concurrency_runtime_config;
typedef struct { 
    bool no_console_putchar;
} cm_htif_runtime_config;
typedef struct { 
    cm_concurrency_runtime_config concurrency;
    cm_htif_runtime_config htif;
    bool skip_root_hash_check;
    bool skip_version_check;
} cm_machine_runtime_config;
typedef struct cm_machine_tag cm_machine; 
CM_API int cm_machine_run(cm_machine *m, uint64_t mcycle_end, CM_BREAK_REASON *break_reason_result, char **err_msg);
CM_API int cm_log_uarch_step(cm_machine *m, cm_access_log_type log_type, bool one_based, cm_access_log **access_log,
    char **err_msg);
CM_API void cm_delete_access_log(cm_access_log *acc_log);
CM_API int cm_verify_uarch_step_log(const cm_access_log *log, const cm_machine_runtime_config *runtime_config,
    bool one_based, char **err_msg);
CM_API int cm_verify_uarch_step_state_transition(const cm_hash *root_hash_before, const cm_access_log *log,
    const cm_hash *root_hash_after, const cm_machine_runtime_config *runtime_config, bool one_based, char **err_msg);
CM_API int cm_verify_uarch_reset_state_transition(const cm_hash *root_hash_before, const cm_access_log *log,
    const cm_hash *root_hash_after, const cm_machine_runtime_config *runtime_config, bool one_based, char **err_msg);
CM_API int cm_verify_uarch_reset_log(const cm_access_log *log, const cm_machine_runtime_config *runtime_config,
    bool one_based, char **err_msg);
CM_API int cm_get_proof(const cm_machine *m, uint64_t address, int log2_size, cm_merkle_tree_proof **proof,
    char **err_msg);
CM_API void cm_delete_merkle_tree_proof(cm_merkle_tree_proof *proof);
CM_API int cm_get_root_hash(const cm_machine *m, cm_hash *hash, char **err_msg);
CM_API int cm_verify_merkle_tree(const cm_machine *m, bool *result, char **err_msg);
CM_API int cm_read_csr(const cm_machine *m, CM_PROC_CSR r, uint64_t *val, char **err_msg);
CM_API int cm_write_csr(cm_machine *m, CM_PROC_CSR w, uint64_t val, char **err_msg);
CM_API uint64_t cm_get_csr_address(CM_PROC_CSR w);
CM_API int cm_read_word(const cm_machine *m, uint64_t word_address, uint64_t *word_value, char **err_msg);
CM_API void cm_delete_cstring(const char *err_msg);
CM_API int cm_log_uarch_reset(cm_machine *m, cm_access_log_type log_type, bool one_based, cm_access_log **access_log,
    char **err_msg);