machine-bindings/cartesi-machine-sys/src/bindings.rs

extern "C" {
    #[doc = " \\brief Runs the machine until mcycle reaches mcycle_end or the machine halts.\n \\param m Pointer to valid machine instance\n \\param mcycle_end End cycle value\n \\param break_reason Receives reason for machine run interruption when not NULL\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_machine_run(
        m: *mut cm_machine,
        mcycle_end: u64,
        break_reason_result: *mut CM_BREAK_REASON,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Runs the machine for one micro cycle logging all accesses to the state.\n \\param m Pointer to valid machine instance\n \\param log_type Type of access log to generate.\n \\param one_based Use 1-based indices when reporting errors.\n \\param access_log Receives the state access log.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_log_uarch_step(
        m: *mut cm_machine,
        log_type: cm_access_log_type,
        one_based: bool,
        access_log: *mut *mut cm_access_log,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief  Deletes the instance of cm_access_log acquired from cm_step\n \\param acc_log Valid pointer to cm_access_log object"]
    pub fn cm_delete_access_log(acc_log: *mut cm_access_log);
}
extern "C" {
    #[doc = " \\brief Checks the internal consistency of an access log\n \\param log State access log to be verified\n \\param r Machine runtime configuration to use during verification. Must be pointer to valid object\n \\param one_based Use 1-based indices when reporting errors\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_verify_uarch_step_log(
        log: *const cm_access_log,
        runtime_config: *const cm_machine_runtime_config,
        one_based: bool,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Checks the validity of a state transition\n \\param root_hash_before State hash before step\n \\param log Step state access log\n \\param root_hash_after State hash after step\n \\param runtime_config Machine runtime configuration to use during verification. Must be pointer to valid object\n \\param one_based Use 1-based indices when reporting errors\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for successful verification, non zero code for error"]
    pub fn cm_verify_uarch_step_state_transition(
        root_hash_before: *const cm_hash,
        log: *const cm_access_log,
        root_hash_after: *const cm_hash,
        runtime_config: *const cm_machine_runtime_config,
        one_based: bool,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Checks the validity of a state transition caused by a uarch state reset\n \\param root_hash_before State hash before step\n \\param log Step state access log produced by cm_log_uarch_reset\n \\param root_hash_after State hash after step\n \\param runtime_config Machine runtime configuration to use during verification. Must be pointer to valid object\n \\param one_based Use 1-based indices when reporting errors\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for successful verification, non zero code for error"]
    pub fn cm_verify_uarch_reset_state_transition(
        root_hash_before: *const cm_hash,
        log: *const cm_access_log,
        root_hash_after: *const cm_hash,
        runtime_config: *const cm_machine_runtime_config,
        one_based: bool,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Checks the internal consistency of an access log produced by cm_log_uarch_reset\n \\param log State access log to be verified\n \\param r Machine runtime configuration to use during verification. Must be pointer to valid object\n \\param one_based Use 1-based indices when reporting errors\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_verify_uarch_reset_log(
        log: *const cm_access_log,
        runtime_config: *const cm_machine_runtime_config,
        one_based: bool,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Obtains the proof for a node in the Merkle tree\n \\param m Pointer to valid machine instance\n \\param address Address of target node. Must be aligned to a 2<sup>log2_size</sup> boundary\n \\param log2_size log<sub>2</sub> of size subintended by target node.\n Must be between 3 (for a word) and 64 (for the entire address space), inclusive\n \\param proof Receives the proof\n proof must be deleted with the function cm_delete_merkle_tree_proof\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error\n \\details If the node is smaller than a page size, then it must lie entirely inside the same PMA range."]
    pub fn cm_get_proof(
        m: *const cm_machine,
        address: u64,
        log2_size: ::std::os::raw::c_int,
        proof: *mut *mut cm_merkle_tree_proof,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief  Deletes the instance of cm_merkle_tree_proof acquired from cm_get_proof\n \\param proof Valid pointer to cm_merkle_tree_proof object"]
    pub fn cm_delete_merkle_tree_proof(proof: *mut cm_merkle_tree_proof);
}
extern "C" {
    #[doc = " \\brief Obtains the root hash of the Merkle tree\n \\param m Pointer to valid machine instance\n \\param hash Valid pointer to cm_hash structure that  receives the hash.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_get_root_hash(
        m: *const cm_machine,
        hash: *mut cm_hash,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Verifies integrity of Merkle tree.\n \\param m Pointer to valid machine instance\n \\param result True if tree is self-consistent, false otherwise.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_verify_merkle_tree(
        m: *const cm_machine,
        result: *mut bool,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Read the value of any CSR\n \\param m Pointer to valid machine instance\n \\param val Receives value read from the CSR\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_csr(
        m: *const cm_machine,
        r: CM_PROC_CSR,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Write the value of any CSR\n \\param m Pointer to valid machine instance\n \\param w CSR to write\n \\param val Value to write\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_csr(
        m: *mut cm_machine,
        w: CM_PROC_CSR,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Gets the address of any CSR\n \\param w The CSR\n \\returns The address of the specified CSR"]
    pub fn cm_get_csr_address(w: CM_PROC_CSR) -> u64;
}
extern "C" {
    #[doc = " \\brief Read the value of a word in the machine state.\n \\param m Pointer to valid machine instance\n \\param word_address Word address (aligned to 64-bit boundary).\n \\param word_value Receives word value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error\n \\warning The current implementation of this function is very slow!"]
    pub fn cm_read_word(
        m: *const cm_machine,
        word_address: u64,
        word_value: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
